[new] ManageAdmins section

--- a/.env.example
+++ b/.env.example
@@ -22,8 +22,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=tg_bot_ap
-DB_USERNAME=root
+DB_DATABASE=ngap
+DB_USERNAME=
 DB_PASSWORD=
 
 SESSION_DRIVER=database
@@ -63,5 +63,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 TELEGRAM_TOKEN=
-ADMIN_ID=
-BOT_NAME
+BOT_NAME="${APP_NAME}"
+### it's needed for seeder
+MAIN_ADMIN_ID=
+DEV_TELEGRAM=
