[new] Manage Channels

--- a/.env.example
+++ b/.env.example
@@ -66,4 +66,4 @@ TELEGRAM_TOKEN=
 BOT_NAME="${APP_NAME}"
 ### it's needed for seeder
 MAIN_ADMIN_ID=
-DEV_TELEGRAM=
+DEV_TELEGRAM= # your telegram username
