--- a/.env.example
+++ b/.env.example
@@ -62,8 +62,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-TELEGRAM_TOKEN=
+TELEGRAM_TOKEN="your telegram token goes here"
 BOT_NAME="${APP_NAME}"
-### it's needed for seeder
-MAIN_ADMIN_ID=
-DEV_TELEGRAM= # your telegram username
+MAIN_ADMIN_ID="Main admin telegram id"
+DEV_TELEGRAM="Developer telegram username!"
